--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+captcha==0.4
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 DateTime==4.7
 Flask==2.2.2
+Flask-ReCaptcha==0.4.2
 Flask-WTF==1.0.1
+idna==3.4
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.0.0
 MarkupSafe==2.1.1
+Pillow==9.3.0
 pytz==2022.5
+requests==2.28.1
+urllib3==1.26.13
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.10.0
